--- a/docker/.travis.yml
+++ b/docker/.travis.yml
@@ -11,7 +11,7 @@ before_deploy:
   - git config --local user.email "satishbabariya@gmail.com"
   - eval $(cat .env | sed 's/^/export /') && eval 'echo "$SWIFT_VERSION"'
   - git tag $SWIFT_VERSION
-deploy:
-  provider: releases
-  api_key: $GITHUBTOKEN
-  skip_cleanup: true
+# deploy:
+#   provider: releases
+#   api_key: $GITHUBTOKEN
+#   skip_cleanup: true
