--- a/docker/.travis.yml
+++ b/docker/.travis.yml
@@ -7,7 +7,8 @@ branches:
 script:
   - eval $(cat .env | sed 's/^/export /') && eval 'echo "$SWIFT_VERSION"'
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t $DOCKER_USERNAME/swift:$SWIFT_VERSION .
+  - docker build -t $DOCKER_USERNAME/swift .
+  - docker tag $DOCKER_USERNAME/swift $DOCKER_USERNAME/swift:$SWIFT_VERSION
   - docker push $DOCKER_USERNAME/swift
   - docker images
 before_deploy:
