--- a/docker/.travis.yml
+++ b/docker/.travis.yml
@@ -11,14 +11,5 @@ script:
   - docker tag $DOCKER_USERNAME/swift $DOCKER_USERNAME/swift:$SWIFT_VERSION
   - docker push $DOCKER_USERNAME/swift
   - cd node
-  - docker build -t $DOCKER_USERNAME/swift:node . 
+  - docker build --build-arg "SWIFT_VERSION=$SWIFT_VERSION" -t $DOCKER_USERNAME/swift:node . 
   - docker push $DOCKER_USERNAME/swift
-# before_deploy:
-#   - git config --local user.name "Satish Babariya"
-#   - git config --local user.email "satishbabariya@gmail.com"
-#   - eval $(cat .env | sed 's/^/export /') && eval 'echo "$SWIFT_VERSION"'
-#   - git tag $SWIFT_VERSION
-# deploy:
-#   provider: releases
-#   api_key: $GITHUBTOKEN
-#   skip_cleanup: true
